BOKU logo updated

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
 <p>More generally, in particular thinking about outlier detection, the outlying points could differ from the normal distribution in several directions. In this case we could select a subset of outlying points for <span class="math inline">\(W\)</span>.</p>
 <p>We should be able to manually select a subset of interest, and this could be automatized using <strong>angular clustering</strong>.</p>
 
-<img src="BOKU-logo.svg" class="slide-logo r-stretch"><div class="footer footer-default">
+<img src="BOKU_2024.png" class="slide-logo r-stretch"><div class="footer footer-default">
 <p>uschilaa.github.io/statistiktage24</p>
 </div>
 </section>
